5-7-17 - Todo list stuff
-Linked map 1 to map menu
-Doubled time it takes to spawn a zombie
-Cut the number of zombies per wave downin half
-Added muzzleflash to the assault, and sniper tower
-Added animation for game over screen

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InViewPort
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 None=======
 
 [WidgetTemplatesExpanded]
@@ -48,14 +48,21 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
+LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
 None=======
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/Effects/ParticleSystems/Weapons/AssaultRifle/Muzzle/P_AssaultRifle_MF.P_AssaultRifle_MF
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1570,6 +1577,73 @@ BlockingVolume.Tags=True
 BlockingVolume.Collision=True
 BlockingVolume.Cooking=True
 BlockingVolume.Actor=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+ParticleSystem.ParticleSystem=True
+ParticleSystem.Thumbnail=True
+ParticleSystem.LOD=True
+ParticleSystem.Bounds=True
+ParticleSystem.Delay=True
+ParticleSystem.Performance=True
+ParticleSystem.MacroUV=True
+ParticleSystem.Occlusion=True
+ParticleSystem.Materials=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
+ParticleModuleVelocity.Velocity=True
+ParticleModuleVelocity.Cascade=True
+ParticleModuleLifetime.Lifetime=True
+ParticleModuleLifetime.Cascade=True
+ParticleModuleSize.Size=True
+ParticleModuleSize.Cascade=True
+ParticleModuleSpawn.Spawn=True
+ParticleModuleSpawn.Burst=True
+ParticleModuleSpawn.Cascade=True
+REINST_Base_C_289.Variable=True
+REINST_Base_C_289.TransformCommon=True
+REINST_Base_C_289.Sockets=True
+REINST_Base_C_289.StaticMesh=True
+REINST_Base_C_289.Materials=True
+REINST_Base_C_289.Physics=True
+REINST_Base_C_289.Collision=True
+REINST_Base_C_289.Lighting=True
+REINST_Base_C_289.Rendering=True
+REINST_Base_C_289.Tags=True
+REINST_Base_C_289.ComponentReplication=True
+REINST_Base_C_289.Cooking=True
+REINST_Base_C_289.Events=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1594,10 +1668,10 @@ Tower_Tile_C.Replication=True
 
 [DetailPropertyExpansion]
 OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.PostProcess.PostProcessSettings\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1649,7 +1723,7 @@ TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ingame_UI_C="\"Object.Appearance.ColorAndOpacity\" "
-Ingame_UI_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Ingame_UI_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
@@ -1664,8 +1738,8 @@ StaticMesh="\"Object.BodySetup.Object.AggGeom\" \"Object.BodySetup.Object.AggGeo
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ZombieHealthbar_C=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.PostProcess.PostProcessSettings\" "
+ActorComponent="\"Object.PostProcess.PostProcessSettings\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 Pause_quit_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1691,6 +1765,15 @@ ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" \"Object.Packaging.Map
 Gameover_back_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Tower_Tile_C="\"Object.Actor.PivotOffset\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleLifetime="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime.Distribution\" "
+ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleSizeBase="\"Object.Size.StartSize.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/ZTD_Blueprint/Blueprints/Game_UI/Pause_menu.Pause_menu=0
@@ -1810,10 +1893,10 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
 MRUItem1=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem3=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
@@ -1827,7 +1910,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Maps
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -1848,12 +1931,14 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=1.000 Y=1.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1474.000 Y=836.000
+WindowSize=X=1484.000 Y=846.000
 None=======
 InitiallyMaximized=True
 
@@ -1876,7 +1961,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2396,8 +2481,13 @@ StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
 StaticMeshEditor.LastCompileMethod=Unknown
 UATHelper.TimeStamp=2017.01.18-05.13.49
 UATHelper.LastCompileMethod=Unknown
+Cascade.TimeStamp=2017.01.18-05.13.04
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2017.01.18-05.13.10
+DistCurveEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Tower_Tile.Tower_Tile;
 RecentlyPlaced=/Game/Assets/foliage_pack/Meshes/Trees/SM_tree7.SM_tree7;
@@ -2406,7 +2496,6 @@ RecentlyPlaced=/Game/Assets/foliage_pack/Meshes/Trees/SM_tree9.SM_tree9;
 RecentlyPlaced=/Game/Assets/foliage_pack/Meshes/Trees/SM_tree5.SM_tree5;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/Base.Base;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/GrenadeTower.GrenadeTower;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/GrenadeTower/Grenade.Grenade;
 RecentlyPlaced=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower;
@@ -2486,7 +2575,7 @@ SlateRemoteSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputS
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
-WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
+WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
@@ -2500,7 +2589,7 @@ BoolProperty=
 IntProperty=
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
@@ -2547,5 +2636,38 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[/Script/UnrealEd.CascadeOptions]
+ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
+ModuleColor_Beam_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Trail_Unselected=(B=170,G=235,R=130,A=0)
+ModuleColor_Trail_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_Spawn_Unselected=(B=100,G=100,R=200,A=0)
+ModuleColor_Spawn_Selected=(B=50,G=50,R=255,A=0)
+ModuleColor_Light_Unselected=(B=49,G=40,R=90,A=0)
+ModuleColor_Light_Selected=(B=0,G=100,R=255,A=0)
+ModuleColor_SubUV_Unselected=(B=49,G=90,R=40,A=0)
+ModuleColor_SubUV_Selected=(B=100,G=200,R=50,A=0)
+ModuleColor_Required_Unselected=(B=100,G=200,R=200,A=0)
+ModuleColor_Required_Selected=(B=50,G=225,R=255,A=0)
+ModuleColor_Event_Unselected=(B=255,G=64,R=64,A=0)
+ModuleColor_Event_Selected=(B=255,G=0,R=0,A=0)
+GridColor_Hi=(B=255,G=100,R=0,A=0)
+GridColor_Low=(B=255,G=100,R=0,A=0)
+bShowParticleCounts=False
+bShowParticleEvents=False
+bShowParticleTimes=False
+bShowParticleDistance=False
+bShowParticleMemory=False
+ParticleMemoryUpdateTime=0.000000
+bShowFloor=False
+FloorMesh=/Engine/EditorMeshes/AnimTreeEd_PreviewFloor.AnimTreeEd_PreviewFloor
+FloorPosition=(X=0.000000,Y=0.000000,Z=0.000000)
+FloorRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+FloorScale=1.000000
+FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
+
+[CascadeEditor]
+LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 
