--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -29,7 +29,7 @@ LastExecutedLaunchName=NIARAII
 NewWindowPosition=(X=315,Y=143)
 NewWindowPosition=(X=379,Y=179)
 LastExecutedPlayModeType=PlayMode_InNewProcess
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+LastExecutedPlayModeType=PlayMode_InViewPort
 None=======
 
 [WidgetTemplatesExpanded]
@@ -48,21 +48,13 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
+LastLevel=/Game/ZTD_Blueprint/Maps/MapB
 None=======
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Menu/MapSelect.MapSelect
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/ZTD_GameMode.ZTD_GameMode
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
-OpenAssetsAtExit=/Game/Effects/ParticleSystems/Weapons/AssaultRifle/Muzzle/P_AssaultRifle_MF.P_AssaultRifle_MF
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/SniperTower/SniperTower.SniperTower
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Base.Base
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/HUD/Ingame_UI.Ingame_UI
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/Player_Controller.Player_Controller
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -253,7 +245,7 @@ NavMeshBoundsVolume.Collision=True
 NavMeshBoundsVolume.Tags=True
 NavMeshBoundsVolume.Cooking=True
 NavMeshBoundsVolume.Actor=True
-WorldSettings.World=True
+WorldSettings.World=False
 WorldSettings.GameMode=True
 WorldSettings.Physics=True
 WorldSettings.Lightmass=True
@@ -1644,6 +1636,7 @@ REINST_Base_C_289.Tags=True
 REINST_Base_C_289.ComponentReplication=True
 REINST_Base_C_289.Cooking=True
 REINST_Base_C_289.Events=True
+Music3_C.TransformCommon=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1671,7 +1664,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.PostProcess.PostProcessSettings\" "
+Object=
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1893,10 +1886,10 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem1=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapC_U_F
-MRUItem3=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem2=/Game/ZTD_Blueprint/Maps/MapA
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapC_U_F
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
@@ -1938,7 +1931,7 @@ GlobalAssetPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=1.000 Y=1.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1484.000 Y=846.000
+WindowSize=X=1494.000 Y=856.000
 None=======
 InitiallyMaximized=True
 
@@ -1961,7 +1954,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=D:/Users/Bryan/Desktop/ZTD/Zombie_Tower_Defense/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2510,7 +2503,7 @@ RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactory
 None=======
 
 [LandscapeEdit]
-BrushRadius=232.945313
+BrushRadius=180.237885
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -2523,8 +2516,10 @@ SmoothFilterKernelSize=4
 MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
-ToolStrength=0.128440
-BrushFalloff=0.422018
+ToolStrength=0.144036
+BrushFalloff=0.866973
+SedimentCapacity=0.349541
+NoiseScale=60.182560
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
@@ -2598,8 +2593,8 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000
-Radius=735.956055
-PaintDensity=0.010000
+Radius=389.688965
+PaintDensity=0.040000
 
 [/Script/EditorStyle.EditorStyleSettings]
 SelectionColor=(R=0.728000,G=0.364000,B=0.003000,A=1.000000)
