Map C - Invisible Wall Update
You now should not be able to see the edge of the map on map C. I still
have to place barrier assets for a visual effect of being blocked
though.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,11 +48,11 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/MapB
+LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
 None=======
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 
@@ -1886,10 +1886,10 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/ZTD_Blueprint/Maps/MapB
-MRUItem1=/Game/ZTD_Blueprint/Maps/Menu_Main
-MRUItem2=/Game/ZTD_Blueprint/Maps/MapA
-MRUItem3=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem0=/Game/ZTD_Blueprint/Maps/MapC_U_F
+MRUItem1=/Game/ZTD_Blueprint/Maps/MapB
+MRUItem2=/Game/ZTD_Blueprint/Maps/Menu_Main
+MRUItem3=/Game/ZTD_Blueprint/Maps/MapA
 MRUItem4=/Game/ZTD_Blueprint/Maps/MapC
 MRUItem5=/Game/ZTD_Blueprint/Maps/Protomap
 MRUItem6=/Game/ZTD_Blueprint/Maps/MapC_U
@@ -2570,7 +2570,7 @@ SlateRemoteSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputS
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ToggleTower/Shoot,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.ShootProjectile,InputSettings.Bindings.ActionMappings.ZoomOutCamera,InputSettings.Bindings.ActionMappings.ZoomInCamera,InputSettings.Bindings.ActionMappings.PauseMenu,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Weapon/Tower1,InputSettings.Bindings.ActionMappings.Weapon/Tower2,InputSettings.Bindings.ActionMappings.Weapon/Tower3,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Weapon/Tower 4,InputSettings.Bindings.ActionMappings.TestDamagePlayer,
-WorldSettings=WorldSettings.Lightmass.Lightmaps,WorldSettings.GameMode.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.Lightmass.Lightmaps,
 Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=
