Zombies on Fire + All towers can be purchased

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,14 +48,18 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
+LastLevel=/Game/ZTD_Blueprint/Maps/MapA
 None=======
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
+OpenAssetsAtExit=/Game/ZTD_Blueprint/dud/Zombie_Character.Zombie_Character
 OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower
+OpenAssetsAtExit=/Game/ZTD_Blueprint/dud/RifleTower.RifleTower
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1757,6 +1761,7 @@ REINST_Zombie_Character_C_187.Rendering=True
 REINST_Zombie_Character_C_187.Replication=True
 REINST_Zombie_Character_C_187.Input=True
 REINST_Zombie_Character_C_187.Actor=True
+StaticMeshSocket.StaticMeshSocket=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1851,8 +1856,8 @@ StaticMesh="\"Object.BodySetup.Object.AggGeom\" \"Object.BodySetup.Object.AggGeo
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ZombieHealthbar_C=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
+ActorComponent=
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.Blackboard\" "
 Pause_quit_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1866,9 +1871,9 @@ REINST_Zombie_Character_C_336="\"Object.Character.Mesh.Object.Collision.BodyInst
 REINST_Zombie_Character_C_344="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_352="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_360="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -1937,7 +1942,7 @@ None=======
 /Game/ZTD_Blueprint/Maps/Protomap.Protomap:PersistentLevel.Protomap=0
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Controller.AI_Controller=0
 /Game/ZTD_Blueprint/Blueprints/HUD/ZombieHealthbar.ZombieHealthbar=0
-/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=0
+/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=1
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Blackboard.AI_Blackboard=1
 /Game/ZTD_Blueprint/Blueprints/HUD/Reticle.Reticle=0
 /Game/ZTD_Blueprint/Materials/Bullet.Bullet=0
@@ -1979,9 +1984,11 @@ None=======
 /Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential.RadialGradientExponential=1
 /Game/StarterContent/Particles/Materials/M_Fire_SubUV.M_Fire_SubUV=1
 /Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character_C:Capsule_GEN_VARIABLE=1
+/Game/ZTD_Blueprint/Normal_Zombie_AI/Tower1_Gun.Tower1_Gun=1
+/Game/ZTD_Blueprint/dud/FlameTower.FlameTower=1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -2719,7 +2726,7 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=Zombie_Character_C.Collision.Collision,
 K2Node_VariableSet=Zombie_Character_C.Collision.Collision,
-StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
+StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
@@ -2729,7 +2736,7 @@ IntProperty=
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Distribution,
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
