i guess the tower1Gun on zombie didnt go through for fire

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -48,14 +48,13 @@ None=======
 
 [EditorStartup]
 LastLevel=/Game/ZTD_Blueprint/Maps/MapC_U_F
-LastLevel=/Game/ZTD_Blueprint/Maps/Menu_Main
+LastLevel=/Game/ZTD_Blueprint/Maps/MapA
 None=======
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
 None=======
-OpenAssetsAtExit=/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1757,6 +1756,7 @@ REINST_Zombie_Character_C_187.Rendering=True
 REINST_Zombie_Character_C_187.Replication=True
 REINST_Zombie_Character_C_187.Input=True
 REINST_Zombie_Character_C_187.Actor=True
+StaticMeshSocket.StaticMeshSocket=True
 
 [DetailCategoriesAdvanced]
 ArrayProperty.Variable=False
@@ -1784,7 +1784,7 @@ OptionsMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Ob
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.ItemStyle\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1866,8 +1866,8 @@ REINST_Zombie_Character_C_336="\"Object.Character.Mesh.Object.Collision.BodyInst
 REINST_Zombie_Character_C_344="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_352="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 REINST_Zombie_Character_C_360="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-StaticMeshComponent=
-MeshComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
@@ -1937,7 +1937,7 @@ None=======
 /Game/ZTD_Blueprint/Maps/Protomap.Protomap:PersistentLevel.Protomap=0
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Controller.AI_Controller=0
 /Game/ZTD_Blueprint/Blueprints/HUD/ZombieHealthbar.ZombieHealthbar=0
-/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=0
+/Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character=1
 /Game/ZTD_Blueprint/Normal_Zombie_AI/AI_Blackboard.AI_Blackboard=1
 /Game/ZTD_Blueprint/Blueprints/HUD/Reticle.Reticle=0
 /Game/ZTD_Blueprint/Materials/Bullet.Bullet=0
@@ -1979,9 +1979,15 @@ None=======
 /Engine/Functions/Engine_MaterialFunctions01/Gradient/RadialGradientExponential.RadialGradientExponential=1
 /Game/StarterContent/Particles/Materials/M_Fire_SubUV.M_Fire_SubUV=1
 /Game/ZTD_Blueprint/Normal_Zombie_AI/Zombie_Character.Zombie_Character_C:Capsule_GEN_VARIABLE=1
+/Game/ZTD_Blueprint/Normal_Zombie_AI/Tower1_Gun.Tower1_Gun=1
+/Game/ZTD_Blueprint/dud/FlameTower.FlameTower=1
+/Game/ZTD_Blueprint/dud/Zombie_Character.Zombie_Character=1
+/Game/ZTD_Blueprint/Blueprints/FlameTower/FlameTower.FlameTower=1
+/Game/ZTD_Blueprint/Blueprints/RifleTower/RifleTower.RifleTower=1
+/Game/ZTD_Blueprint/dud/RifleTower.RifleTower=1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -2047,7 +2053,7 @@ bShowMobileStats=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints/Menu
-ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Normal_Zombie_AI
+ContentBrowserTab1.SelectedPaths=/Game/ZTD_Blueprint/Blueprints
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -2075,7 +2081,7 @@ GlobalAssetPicker.CurrentViewType=0
 ScreenPosition=X=-1272.000 Y=148.000
 ScreenPosition=X=22.000 Y=265.000
 WindowSize=X=1420.000 Y=860.000
-WindowSize=X=1514.000 Y=876.000
+WindowSize=X=1524.000 Y=886.000
 None=======
 InitiallyMaximized=True
 
@@ -2098,7 +2104,7 @@ PrimType=1
 
 [Directories2]
 UNR=../../../../../Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
-UNR=../../../../../UE4 Projects/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
+UNR=../../../../../../Users/Jordan Obe/Documents/GitHub/AI stuff/Zombie_TowerDefense/Content/ZTD_Blueprint/Maps
 None=======
 BRUSH=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
 FBX=../../../../../../Users/Jordan Obe/Documents/GitHub/Zombie_TowerDefense/Content/
@@ -2599,23 +2605,23 @@ MaterialEditor.TimeStamp=2017.03.30-13.25.07
 MaterialEditor.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.03.29-06.29.53
 ExternalImagePicker.LastCompileMethod=External
-BlueprintProfiler.TimeStamp=2017.03.29-06.29.41
+BlueprintProfiler.TimeStamp=2017.03.30-13.24.54
 BlueprintProfiler.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2017.03.29-06.29.41
+BlueprintGraph.TimeStamp=2017.03.30-13.24.54
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.03.29-06.30.10
 SequencerWidgets.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2017.03.14-04.21.24
 HierarchicalLODUtilities.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2017.03.29-06.30.02
+MovieSceneCapture.TimeStamp=2017.03.30-13.25.09
 MovieSceneCapture.LastCompileMethod=External
 TextureEditor.TimeStamp=2017.03.09-04.12.32
 TextureEditor.LastCompileMethod=Unknown
 None=======
 NewLevelDialog.TimeStamp=2017.03.14-04.21.41
 NewLevelDialog.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2017.03.14-04.22.00
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.03.30-13.25.18
+StaticMeshEditor.LastCompileMethod=External
 UATHelper.TimeStamp=2017.01.18-05.13.49
 UATHelper.LastCompileMethod=Unknown
 Cascade.TimeStamp=2017.01.18-05.13.04
@@ -2719,7 +2725,7 @@ Zombie_Character_C=Zombie_Character_C.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=Zombie_Character_C.Collision.Collision,
 K2Node_VariableSet=Zombie_Character_C.Collision.Collision,
-StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD4.MeshReductionSettings,
+StaticMesh=StaticMesh.LOD4.MeshReductionSettings,StaticMesh.LOD3.MeshReductionSettings,StaticMesh.LOD2.MeshReductionSettings,StaticMesh.LOD1.MeshReductionSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.MeshBuildSettings,
 FloatProperty=
 CameraComponent=CameraComponent.PostProcess.AutoExposure,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.TreePivotPainter,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
@@ -2729,7 +2735,7 @@ IntProperty=
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Distribution,
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
